<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:isScrollContainer="true"
    android:scrollbarAlwaysDrawHorizontalTrack="true"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:scrollbarStyle="outsideInset"
    android:scrollbars="vertical" >
	<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
	    <RelativeLayout 
		    android:id="@+id/header"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_alignParentTop="true"
			>
	
		    <ImageView
			    android:id="@+id/logo"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:contentDescription="@string/contentDescription"
			    android:layout_alignParentTop="true"
			    android:src="@drawable/globe" />
	
		    <TextView
		        android:id="@+id/title"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentRight="true"
		        android:layout_centerVertical="true"
		        android:layout_toRightOf="@+id/logo"
		        android:gravity="center"
		        android:text="@string/title"
		        android:textAppearance="?android:attr/textAppearanceLarge"
		        android:textSize="26sp" />
	
	    </RelativeLayout>
	    <View android:id="@+id/divider"
	        android:layout_below="@+id/header"
	        style="@style/Divider"/>
		<LinearLayout 
		    android:id="@+id/options"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_below="@+id/divider"
			>
			<CheckBox
			    android:id="@+id/hiddensound"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:button="@drawable/button_background_selector" />
	
		</LinearLayout>
	    <TextView
	        android:id="@+id/description"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentRight="true"
	        android:layout_below="@+id/options"
	        android:textSize="24sp"
	        android:gravity="center"
	        android:textColor="#990000"
	        android:text="@string/contentDescription"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	    
	    <ImageView
	        android:id="@+id/placeImage"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_centerHorizontal="true"
	        android:layout_below="@+id/description"
	        android:adjustViewBounds="true"
	        android:contentDescription="@string/contentDescription" />
	    
		<TextView
	        android:id="@+id/questionDialog"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/placeImage"
	        android:layout_alignParentLeft="true"
	        android:textSize="16sp"
	        android:text="@string/acceptance"
	        android:gravity="center"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
		<RelativeLayout 
		    android:id="@+id/Buttons"
		    android:layout_width="match_parent"
		    android:layout_below="@+id/questionDialog"
		    android:layout_height="wrap_content"
		    android:layout_alignParentBottom="true"
			>
		    <Button
		        android:id="@+id/accept"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentRight="true"
		        android:background="@drawable/button_gradient"
		        android:text="@string/accept" />
		    <Button
		        android:id="@+id/cancel"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:background="@drawable/button_gradient"
		        android:text="@string/cancel" />
		</RelativeLayout>
	</RelativeLayout>
</ScrollView>