<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout android:id="@+id/listen_layout"
        	android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/contentDescription"
                android:src="@drawable/globe" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/title"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="26sp" />

            <CheckBox
                android:id="@+id/hiddensound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/button_background_selector" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/contentDescription"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#990000"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/placeImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/contentDescription" />

            <TextView
                android:id="@+id/questionDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/acceptance"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="16sp" />
		</LinearLayout>
	</LinearLayout>
</ScrollView>